--- a/app/src/main/res/layout/avatarslide_item_avatar.xml
+++ b/app/src/main/res/layout/avatarslide_item_avatar.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imgDrawable"
-        android:layout_width="196dp"
-        android:layout_height="196dp"
+        android:layout_width="172dp"
+        android:layout_height="172dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@null"
         app:layout_constraintBottom_toTopOf="@+id/txtName"
+        app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,23 +23,24 @@
 
     <TextView
         android:id="@+id/txtName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:textAlignment="center"
         android:textColor="@color/md_grey_500"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/imgDrawable"
+        app:layout_constraintStart_toStartOf="@+id/imgDrawable" />
 
     <ImageView
-        android:visibility="gone"
         android:id="@+id/imgSelect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="@+id/imgDrawable"
         app:layout_constraintEnd_toEndOf="@+id/imgDrawable"
         app:srcCompat="@drawable/ic_done_white" />
