--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,13 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="SlideDefaultHeading" parent="TextAppearance.AppCompat.Display1">
+        <item name="android:textColor">@color/md_blue_grey_800</item>
+        <item name="android:textSize">@dimen/appIntroHeadingTextSize</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
