--- a/app/src/main/res/layout/item_btn_coin.xml
+++ b/app/src/main/res/layout/item_btn_coin.xml
@@ -23,6 +23,7 @@
         android:id="@+id/txtPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_coin_tinder"
         android:gravity="bottom"
         android:textColor="@android:color/white"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:clickable="false"
         android:text="@string/posts_text_post"
         android:textColor="@color/md_white_1000"
         app:layout_constraintBottom_toBottomOf="parent"
