--- a/app/src/main/res/layout/item_new_post.xml
+++ b/app/src/main/res/layout/item_new_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="gone"
     android:elevation="8dp">
 
     <android.support.constraint.Guideline
@@ -25,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:srcCompat="@mipmap/ic_launcher_round"
+        app:srcCompat="@drawable/boy_heisenberg"
         android:contentDescription="@null" />
 
     <include
