--- a/app/src/main/res/layout/fragment_postpager.xml
+++ b/app/src/main/res/layout/fragment_postpager.xml
@@ -14,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!--
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -22,7 +23,7 @@
             android:background="@android:color/white"
             android:gravity="center"
             app:title="@string/fragment_posts_title"
-            app:titleTextColor="@color/md_blue_grey_700" />
+            app:titleTextColor="@color/md_blue_grey_700" />-->
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
