--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -52,6 +52,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtCity" />
+<!--
     <TextView
         android:id="@+id/txtItemPosts"
         style="@style/MenuItemCustom"
@@ -107,7 +117,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtItemMessages" />
-
     <TextView
         android:id="@+id/txtItemLogout"
         style="@style/MenuItemCustom"
@@ -120,7 +129,7 @@
         android:text="@string/menuitem_logout_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtItemAppInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/txtItemAppInfo" />-->
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
