--- a/app/src/main/res/drawable/bg_burger_icon.xml
+++ b/app/src/main/res/drawable/bg_burger_icon.xml
@@ -3,10 +3,10 @@
     android:color="?attr/colorControlHighlight">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="@color/colorPrimary" />
             <stroke
                 android:width="1dp"
-                android:color="@color/colorAccent" />
+                android:color="@color/colorPrimary" />
             <padding
                 android:bottom="10dp"
                 android:left="10dp"
