--- a/app/src/main/res/layout/fragment_post_comments.xml
+++ b/app/src/main/res/layout/fragment_post_comments.xml
@@ -14,8 +14,8 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guidelineThirdQuarter"
         app:layout_constraintStart_toStartOf="@+id/guidelineOneQuarter"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gir_hipster" />
+        app:layout_constraintTop_toBottomOf="@+id/imgCrown"
+        app:srcCompat="@drawable/girl_hipster" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineOneQuarter"
@@ -52,7 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:drawableEnd="@drawable/ic_coin_tinder"
+        android:layout_marginTop="32dp"
+        android:drawableEnd="@drawable/ic_favorite_primarydark_24dp"
         android:gravity="bottom"
         android:text="178"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,5 +118,19 @@
             android:layout_height="wrap_content"
             android:hint="@string/comment_text_hint_message" />
     </android.support.design.widget.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/imgCrown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        android:contentDescription="@null"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineThirdQuarter"
+        app:layout_constraintStart_toStartOf="@+id/guidelineOneQuarter"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_crown_1" />
 
 </android.support.constraint.ConstraintLayout>
