--- a/app/src/main/res/layout/item_btn_coin.xml
+++ b/app/src/main/res/layout/item_btn_coin.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
-        android:drawableEnd="@drawable/ic_coin_tinder"
+        android:drawableEnd="@drawable/ic_crown_1"
         android:gravity="bottom"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
