--- a/app/src/main/res/layout/post_item_post.xml
+++ b/app/src/main/res/layout/post_item_post.xml
@@ -20,12 +20,12 @@
             android:id="@+id/imgProfile"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@null" />
+            app:srcCompat="@drawable/boy_papanoel" />
 
         <TextView
             android:id="@+id/txtName"
@@ -34,13 +34,15 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Steve Campos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/md_blue_grey_500"
             app:layout_constraintEnd_toStartOf="@+id/imgMoreHorizontal"
             app:layout_constraintStart_toEndOf="@+id/imgProfile"
             app:layout_constraintTop_toTopOf="@+id/imgProfile" />
 
         <TextView
             android:id="@+id/txtTime"
+            style="@style/TextAppearance.AppCompat.Notification.Time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -55,24 +57,30 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
             android:text="A round-the-world trip remains the world's greatest journey."
-            android:textColor="@color/md_grey_500"
+            android:textColor="@color/md_blue_grey_300"
+            android:linksClickable="true"
+            android:autoLink="all"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTime" />
+            app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
         <TextView
             android:id="@+id/txtLikesCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:drawableStart="@drawable/ic_favorite_red_24dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:drawablePadding="8dp"
+            android:drawableStart="@drawable/ic_favorite_primarydark_24dp"
             android:text="1,345"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtContent" />
@@ -81,37 +89,36 @@
             android:id="@+id/txtCommentsCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:drawableStart="@drawable/ic_chat_grey_24dp"
+            android:layout_marginTop="8dp"
             android:drawablePadding="8dp"
+            android:drawableStart="@drawable/ic_chat_bubble_grey_24dp"
             android:text="82"
+            android:textColor="@color/md_grey_300"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtLikesCount"
             app:layout_constraintTop_toBottomOf="@+id/txtContent" />
 
         <ImageView
             android:id="@+id/imgMoreHorizontal"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/ic_more_horiz_accent_24dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@null" />
+            app:srcCompat="@drawable/ic_crown_1" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+        <Button
+            android:id="@+id/btnChat"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:focusable="true"
-            app:srcCompat="@drawable/ic_chevron_right_white_24dp"
+            android:layout_marginEnd="8dp"
+            android:text="Chatear"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtContent" />
