--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#90A4AE</color>
-    <color name="colorAccent">#1DE9B6</color>
+    <color name="colorPrimary">#1DE9B6</color>
+    <color name="colorPrimaryDark">#009688</color>
+    <color name="colorAccent">#03A9F4</color>
+
+
     <!-- google's material design colours from
     http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
 
@@ -290,7 +292,7 @@
     <color name="md_white_1000">#ffffff</color>
 
     <!--blue grey-->
-    <color name="md_blue_grey_50">#ECEFF1</color>
+    <color name="md_blue_grey_50">#DDECEFF1</color>
     <color name="md_blue_grey_100">#CFD8DC</color>
     <color name="md_blue_grey_200">#B0BBC5</color>
     <color name="md_blue_grey_300">#90A4AE</color>
