--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,10 +13,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.TranslucentStatusBar" parent="Theme.AppCompat.Light">
+    <style name="AppTheme.LigthStatusBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+    <style name="AppTheme.PrimaryColorStatusBar" parent="AppTheme.LigthStatusBar">
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
     </style>
 
     <style name="SlideDefaultHeading" parent="TextAppearance.AppCompat.Display1">
@@ -25,11 +28,13 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="MenuItemCustom" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:textColor">@color/md_blue_grey_500</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">16dp</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
