--- a/app/src/main/res/layout/avatarslide_item_avatar.xml
+++ b/app/src/main/res/layout/avatarslide_item_avatar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imgDrawable"
+        android:id="@+id/avatarDrawable"
         android:layout_width="172dp"
         android:layout_height="172dp"
         android:layout_marginBottom="8dp"
@@ -31,8 +31,8 @@
         android:textAlignment="center"
         android:textColor="@color/md_grey_500"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imgDrawable"
-        app:layout_constraintStart_toStartOf="@+id/imgDrawable" />
+        app:layout_constraintEnd_toEndOf="@+id/avatarDrawable"
+        app:layout_constraintStart_toStartOf="@+id/avatarDrawable" />
 
     <ImageView
         android:id="@+id/imgSelect"
@@ -41,7 +41,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:contentDescription="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/imgDrawable"
-        app:layout_constraintEnd_toEndOf="@+id/imgDrawable"
+        app:layout_constraintBottom_toBottomOf="@+id/avatarDrawable"
+        app:layout_constraintEnd_toEndOf="@+id/avatarDrawable"
         app:srcCompat="@drawable/ic_select_tool" />
 </android.support.constraint.ConstraintLayout>
