--- a/app/src/main/res/layout/fragment_post_comments.xml
+++ b/app/src/main/res/layout/fragment_post_comments.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/imgProfile"
@@ -126,8 +127,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="visible"
         android:contentDescription="@null"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/guidelineThirdQuarter"
         app:layout_constraintStart_toStartOf="@+id/guidelineOneQuarter"
         app:layout_constraintTop_toTopOf="parent"
