--- a/app/src/main/res/layout/post_item_post.xml
+++ b/app/src/main/res/layout/post_item_post.xml
@@ -8,6 +8,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    android:background="?attr/selectableItemBackground"
     app:cardBackgroundColor="@android:color/white"
     app:cardElevation="2dp">
 
