--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -34,7 +34,7 @@
 
 
     <TextView
-        android:id="@+id/txtDescription"
+        android:id="@+id/txtContentText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
     <TextView
-        android:id="@+id/txtCoins"
+        android:id="@+id/txtFavoriteCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toTopOf="@+id/imgProfile" />
 
     <TextView
-        android:id="@+id/txtComments"
+        android:id="@+id/txtCommentCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -73,7 +73,7 @@
         android:text="32"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineThirdQuarter"
-        app:layout_constraintTop_toBottomOf="@+id/txtCoins" />
+        app:layout_constraintTop_toBottomOf="@+id/txtFavoriteCount" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
@@ -86,8 +86,22 @@
         app:layout_constraintBottom_toTopOf="@+id/tilMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
+        app:layout_constraintTop_toBottomOf="@+id/txtContentText"
         tools:listitem="@layout/post_item_comment" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tilMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtContentText" />
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabSend"
@@ -115,6 +129,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/edtMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/comment_text_hint_message" />
