--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -8,17 +8,16 @@
 
     <TextView
         android:id="@+id/txtEmpty"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/fragment_posts_message_empty"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
-        tools:listitem="@layout/post_item_post"
         android:id="@+id/recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,7 +28,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/post_item_post" />
 
     <ProgressBar
         android:id="@+id/progress"
