--- a/app/src/main/res/layout/item_btn_coin.xml
+++ b/app/src/main/res/layout/item_btn_coin.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.AppCompat.Button.Colored"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
