--- a/app/src/main/res/layout/post_item_post.xml
+++ b/app/src/main/res/layout/post_item_post.xml
@@ -8,7 +8,9 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@android:color/white"
     app:cardElevation="2dp">
 
@@ -60,11 +62,11 @@
             android:layout_marginEnd="24dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:autoLink="all"
             android:clickable="true"
+            android:linksClickable="true"
             android:text="A round-the-world trip remains the world's greatest journey."
             android:textColor="@color/md_blue_grey_300"
-            android:linksClickable="true"
-            android:autoLink="all"
             android:textColorLink="@color/colorPrimaryDark"
             android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
