--- a/app/src/main/res/layout/item_new_post.xml
+++ b/app/src/main/res/layout/item_new_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="8dp"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <ImageView
         android:id="@+id/imgProfile"
